--- a/Rulebook.tex
+++ b/Rulebook.tex
@@ -82,11 +82,11 @@
 \begin{titlepage}
 	\centering
 	%\includegraphics[width=0.15\textwidth]{example-image-1x1}\par\vspace{1cm}
-	{\scshape\LARGE World Robot Summit 2020 \par}
+	{\scshape\LARGE RoboCup2021\par}
 	\vspace{1cm}
-	{\scshape\Large Partner Robot Challenge\par}
+	{\scshape\Large @Home\par}
 	\vspace{1.5cm}
-	{\huge\bfseries Real Space\par}
+	{\huge\bfseries Simulation DSLP\par}
 	\vspace{2cm}
 	{\Large\itshape Rules \& Regulations\par}
 	\vfill
@@ -95,20 +95,20 @@
 	
 % Bottom of the page
 %	{\large \today\par}
-{\large Version 1.0.0 (January 1, 2020)}
+{\large Version 0.0.0 (January 25, 2021)}
 \end{titlepage}
 
 \newpage
 
 \begin{about}
 
-This is the official rulebook of the Partner Robot Challenge (Real Space) 2020 competition. It has been written by the Service Category Technical Committee members.
+This is the official rulebook of the RoboCup DSPL Simulation 2021 competition. It has been written by the Service Category Technical Committee members.
 
 \end{about}
 
 \begin{acknowledgements}
 
-We would like to thank all the people who contributed to the World Robot Summit Service Category Technical Committee members with their feedback and comments. We also like to thank the members of RoboCup@Home community.
+We would like to thank all the people who contributed to the RoboCup@home Technical Committee members with their feedback and comments. We also like to thank the members of World Robot Summit community.
 
 
 \end{acknowledgements}
@@ -122,45 +122,36 @@ We would like to thank all the people who contributed to the World Robot Summit 
 
 \section{Introduction}
 
-\subsection{Service Robotics Category}
+\subsection{RoboCup}
 
-The Competition will be helpful to solve social problems stemming from rapidly aging population and declining birth rates through technology that works alongside humans to provide a variety of services. As we enter the age in which robots will become a part of people's lives, there is a need for robots that can perform a variety of services in cooperation with humans. There is a need for service robots that can work safely and reliably with people and for technologies that create the environment necessary for developing such robots. These include AI learning through which humans and robots engage in advanced communication, Big Data information-sharing through clouds, collection and use of information gathered through IoT technology, etc. Human resource development (training) is indispensable in the development of robotic technology and social implementation of robots.
 
-\subsection{Partner Robot Challenge}
+\subsection{@Home}
 
-The concept of Partner Robot Challenge is to foster the collaboration between human and robot. Not limited to assistance for handicapped person, but also in domestic home environment with living children and elderly person, it is targeted to realize a rich collaborative living environment for human and robot. It is not the aim of this competition for the robot to complete the task alone, but with the communication and workload sharing with human user, this challenge competes the technologies for smooth collaboration between human and robot. The focus on human-robot collaboration is the uniqueness of this competition.
+
+\subsection{DSPL}
+
 
 \newpage
-\section{Partner Robot Challenge \\Real Space}
+\section{DSPL Simulation}
 
 \subsection{Concept}
 
-The concept behind the competition is adapted from the roles of a home assistant. A home assistant is trained to aid or assist human on daily house chores. Apart from physical work assistance, the home assistant can also maintain friendship and social companionship with human. The fundamental concept of this challenge is to develop a robot that resembles a home assistant as a partner to support human.
 
-In the competition, the robot is to compete for the task as a home assistant. Not limited to the support for handicapped person, the robot is anticipated to be able to perform a wide range of tasks as a partner to elderly person and normal healthy person too.
 
 \begin{figure}[!h]%[!htbp]
 	\centering
 	%\begin{center}
 	\includegraphics[width=0.80\textwidth]{{images/real02.png}}
-	\caption{Concept of the Partner Robot Challenge.}
+	\caption{Concept of the RoboCup@Home DSPL.}
 	\label{fig:concept}
 	%\end{center}
 \end{figure}
 
 \subsection{Competition}
 
-The competition consists of a qualifier round, semi-final, and a final. 
-
-The objective is to evaluate the fundamental skills of the robot to accomplish basic functions of a home assistant, such as serving items, searching items, and tidy-up the environment. The robot (with human collaboration) is required to perform such tasks within a set of defined rules and environments in order to acquire scores for the competition. The competition ends with the Final where only the two highest ranked teams compete to become the winner. 
-
-In order to stimulate research through competitions, competitions should be recognised as a useful benchmark for research outputs. Currently, the layout of the arena in the many home service robot competitions, such as RoboCup, RockIn, and WRS, is different between them, is too large, and changes every year, and therefore it is virtually impossible to prepare the same setup in a research laboratory. In addition, the tasks and the rules change constantly and objective comparison between solutions becomes difficult. One of the aims of this competition is to provide a benchmark for home service robots where different research groups can compare their different solutions to a given problem.
-
-%The participating teams are encouraged to demonstrate their latest research development on new approaches and applications of the assistance robot in an interesting scenario setting. 
-A primary objective of the competition is to observe all the different solutions from the many teams to the very same problem.
 
 \subsection{Standard Robot Platform}
-The Human Support Robot\footnotemark (HSR) by Toyota Motor Corporation will be used as the Standard Platform Robot for the Partner Robot Challenge (Real Space).
+The Human Support Robot\footnotemark (HSR) by Toyota Motor Corporation will be used as the Standard Platform Robot for the RoboCup@Home DSPL.
 
 \footnotetext[1]{Takashi Yamamoto et. al. \textit{Development of Human Support Robot as the research platform of a domestic mobile manipulator}. ROBOMECH Journal, 2019.}
 
