disclaimer added on software compatibility

--- a/Rulebook.tex
+++ b/Rulebook.tex
@@ -215,6 +215,10 @@ The competition is as follows:
     \item Final
 \end{itemize}
 
+\subsection{Disclaimer}
+
+The Open Source Software of the HSR is provided at it is. The Docker container works under Ubuntu 18.04 and the private Toyota Motor Company libraries are not compatible with the OSS and may cause the system to crash. If you are a regular user of the real robot, please consider this condition when using your code as you might need to adapt your code to the provided libraries.
+
 \clearpage
 \section{General Rules}
 
