--- a/Rulebook.tex
+++ b/Rulebook.tex
@@ -116,14 +116,14 @@
 	
 % Bottom of the page
 %	{\large \today\par}
-{\large Version 0.0.0 (January 25, 2021)}
+{\large Version 0.0.1 (Feb 27, 2021)}
 \end{titlepage}
 
 \newpage
 
 \begin{about}
 
-This is the official rulebook of the RoboCup DSPL Simulation 2021 competition. It has been written by the Service Category Technical Committee members.
+This is the official rulebook of the RoboCup DSPL Simulation 2021 competition. It has been written by the Technical Committee members.
 
 \end{about}
 
